memorialist, genarchitects, more civics changes

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -633,7 +633,7 @@
 
 	civic_toxic_baths:0 "§L£tec_civic_feature£§!Mutagenic Spas"
 	civic_toxic_baths_desc:0 "['concept_tec_feature_civic']\n\nThis civilization engages in ritualistic mutagenic bathing, with professional attendants overseeing the use of highly dangerous substances. This 'invigorating' process may appall uninitiated onlookers."
-	civic_tooltip_toxic_baths_effects:1 "$tec_loc_c_unlocks_feature$ §H£building£ $building_toxic_bath$s§!\n£building£ §Y$building_toxic_bath$s§! are planet-unique and provide §Y['concept_tec_specialist_job_bath_attendant_icon']§! jobs, each one granting the following bonuses per £district£ §HIndustrial District§!:\n- Pop Growth Speed: §G+1%§!\n- Organic Pop Assembly Speed: §G+1%§!\n- Happiness: §R-0.75%§!\n- Habitability: §R-0.5%§!\n\n$tec_loc_c_unlocks_holding$ §H£building£ $holding_toxic_bath$§!\n£building£ §Y$holding_toxic_bath$§! bring the effects of §Y$building_toxic_bath$§! to vassals.\n"
+	civic_tooltip_toxic_baths_effects:1 "$tec_loc_c_unlocks_feature$ §H£building£ $building_toxic_bath$s§!\n£building£ §Y$building_toxic_bath$s§! are planet-unique and provide §Y['concept_tec_specialist_job_bath_attendant_icon']§! jobs, each one granting the following bonuses per £district£ §HIndustrial District§!:\n- Pop Growth Speed: §G+1%§!\n- Organic Pop Assembly Speed: §G+1%§!\n- Happiness: §R-0.5%§!\n- Habitability: §R-0.5%§!\n\n$tec_loc_c_unlocks_holding$ §H£building£ $holding_toxic_bath$§!\n£building£ §Y$holding_toxic_bath$§! bring the effects of §Y$building_toxic_bath$§! to vassals.\n"
 		#OLD_civic_tooltip_toxic_baths_effects:1 "Can build §YMutagenic Spas§!\nEach §YBath Attendant§! grants:\nPop Growth Speed: §G+1%§! per §HIndustrial District§!\nHappiness: §R-0.75%§! per §HIndustrial District§!\nHabitability: §R-0.25%§! per §HIndustrial District§!"
 
 	civic_corporate_toxic_baths:0 "§L£tec_civic_feature£§!Mutagenic Spas"
@@ -647,7 +647,7 @@
 
 	civic_machine_toxic_baths:0 "§L£tec_civic_feature£§!Hyper Lubrication Basin"
 	civic_machine_toxic_baths_desc:0 "['concept_tec_feature_civic']\n\nThis machine empire improved upon its basic drone-shell production through the vigorous application of highly aggressive lubrication agents, controlled by carefully programmed terminals. This 'optimized' process relies on typically wasted byproducts from the industries that are now repurposed for maximal efficiency."
-	civic_tooltip_machine_toxic_baths_effects:0 "$tec_loc_c_unlocks_feature$ §H£building£ $building_toxic_bath_machine$§!\n£building£ §Y$building_toxic_bath_machine$s§! are planet-unique and provide §Y['concept_tec_specialist_job_bath_attendant_machine_icon']§! jobs, each one granting the following bonuses per £district£ §HIndustrial District§!:\n- Robotic Pop Assembly Speed: §G+2%§!\n- Amenities Usage: §R+1%§!\n\n$tec_loc_c_unlocks_holding$ §H£building£ $holding_toxic_bath_machine$§!\n£building£ §Y$holding_toxic_bath$§! bring the effects of §Y$building_toxic_bath_machine$§! to vassals.\n"
+	civic_tooltip_machine_toxic_baths_effects:0 "$tec_loc_c_unlocks_feature$ §H£building£ $building_toxic_bath_machine$§!\n£building£ §Y$building_toxic_bath_machine$s§! are planet-unique and provide §Y['concept_tec_specialist_job_bath_attendant_machine_icon']§! jobs, each one granting the following bonuses per £district£ §HIndustrial District§!:\n- Robotic Pop Assembly Speed: §G+2%§!\n- Amenities Usage: §R+0.75%§!\n\n$tec_loc_c_unlocks_holding$ §H£building£ $holding_toxic_bath_machine$§!\n£building£ §Y$holding_toxic_bath$§! bring the effects of §Y$building_toxic_bath_machine$§! to vassals.\n"
 		#OLD_civic_tooltip_machine_toxic_baths_effects:0 "Can build §YProduction Basins§!\nEach §YLubrication Terminal§! grants:\nPop Assembly Speed: §G+1%§! per §HIndustrial District§!\nAmenities Usage: §R+1%§! per §HIndustrial District§!"
 
 	civic_pleasure_seekers:0 "§L£tec_civic_feature£§!Pleasure Seekers"
@@ -1334,7 +1334,7 @@
  # former civic_reeducated_labor
 	civic_tec_regular_forced_reeducation:0 "§R§!Forced Reeducation"
 	civic_tec_regular_forced_reeducation_desc:0 "['concept_tec_basic_civic']\n['concept_tec_slavery_civic']\n\nIn this society criminals are put into the special reeducation labor camps to serve as slaves. They pay their debt to society by working for common good."
-	civic_tec_regular_forced_reeducation_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_reeducation_facilities$§!\n§Y£building£ $building_tec_reeducation_facilities$§! are planet-unique and provide ['concept_tec_worker_job_tec_reeducated_subject_plural_icon'] jobs, increased by the §Y$tec_loc_capital_tier$§!, which produce resources based on the planet designation and get §HReeducated§! to follow the empire ethics periodically.\n\n$tec_loc_c_unlocks_feature$ §H£pop_cat_slave£ Folstered Reeducation§!\nAllows to set §YEnslavement Rate§! policy, from §G+10%§! to §G+20%§!\n\n$tec_loc_c_modifiers$"
+	civic_tec_regular_forced_reeducation_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_reeducation_facility$§!\n§Y£building£ $building_tec_reeducation_facility_plural$§! are planet-unique and provide ['concept_tec_worker_job_tec_reeducated_subject_plural_icon'] jobs, increased by the §Y$tec_loc_capital_tier$§!, which produce resources based on the planet designation and get §HReeducated§! to follow the empire ethics periodically.\n\n$tec_loc_c_unlocks_feature$ §H£pop_cat_slave£ Folstered Reeducation§!\nAllows to set §YEnslavement Rate§! policy, from §G+10%§! to §G+20%§!\n\n$tec_loc_c_modifiers$"
 
  # former civic_welfare_state	# I HATE MODIFIERS I HATE MODIFIERS
 	civic_tec_regular_social_prosperity:0 "§R§!Social Prosperity"
@@ -2167,9 +2167,9 @@
 	civic_tec_hive_frenzy_desc:0 "['concept_tec_basic_civic']\n\nThis Hive Mind is clearly determined to favor the reproduction of its drones, even if it implies a stricter control of its generally combative and ever-demanding population.\n"
 	civic_tec_hive_frenzy_tooltip:0 "The hive empire gain additional §GPop grow§! but has more £crime£ §Rdeviancy§! and §Rincreased colonizer cost§!\n\n"
 
-	civic_tec_hive_genetic: "§R§!Genetic Perfection"
-	civic_tec_hive_genetic_desc:0 "['concept_tec_basic_civic']\n\nEvery genome and cell of every being connected to the collective is minutely guarded and tissued accurately.\n"
-	civic_tec_hive_genetic_tooltip:0 "Starts game with §GGene Tailoring§!, and hive pops have §Y1 aditional genetic point§!.\n"
+	civic_tec_hive_evolutionary_architects: "§R§!Genetic Perfection"
+	civic_tec_hive_evolutionary_architects_desc:0 "['concept_tec_basic_civic']\n\nEvery genome and cell of every being connected to the collective is minutely guarded and tissued accurately.\n"
+	civic_tec_hive_evolutionary_architects_tooltip:0 "Starts game with §GGene Tailoring§!, and hive pops have §Y1 aditional genetic point§!.\n"
 
 	civic_tec_hive_eyesinthesky:0 "§R§!Eyes in the Sky"
 	civic_tec_hive_eyesinthesky_desc:0 "['concept_tec_basic_civic']\n\nConcerned by its own security, this Hive Mind has a strong focus on the defense and maintenance of proper lines of containment for external invaders or threats, so it greatly focus on a cohesion of territory and naval assets."
