--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -847,7 +847,7 @@
 	job_tec_landowner:0 "Landowner"
 	job_tec_landowner_plural:0 "Landowners"
 	job_tec_landowner_desc:0 "These appointed and exalted individuals have earned their right to own and dominate large extensions of a planet, whether it has been via martial, political or influential prowess."
-	job_tec_landowner_effect_desc_base:0 "£job_tec_landowner£ $job_tec_landowner_plural$ produce £mod_planet_stability_add£ §Y$PLANET_STABILITY_TITLE$§!, decrease £crime£ §Y$PLANET_CRIME_TITLE$§! and spawn £defense_army£ §YDefense Armies§!."
+	job_tec_landowner_effect_desc_standard:0 "£job_tec_landowner£ $job_tec_landowner_plural$ produce £mod_planet_stability_add£ §Y$PLANET_STABILITY_TITLE$§!, decrease £crime£ §Y$PLANET_CRIME_TITLE$§! and spawn £defense_army£ §YDefense Armies§!."
 	job_tec_landowner_effect_desc_corporate:0 "£job_tec_landowner£ $job_tec_landowner_plural$ produce £mod_planet_stability_add£ §Y$PLANET_STABILITY_TITLE$§!, decrease £crime£ §Y$PLANET_CRIME_TITLE$§! and spawn £defense_army£ §YDefense Armies§!."
 	job_tec_landowner_effect_desc:0 "£job_tec_landowner£ $job_tec_landowner_plural$ produce £mod_planet_stability_add£ §Y$PLANET_STABILITY_TITLE$§!, decrease £crime£ §Y$PLANET_CRIME_TITLE$§! and spawn £defense_army£ §YDefense Armies§!."
 	mod_job_tec_landowner_add:0 "$job_tec_landowner$ Jobs"
@@ -857,7 +857,7 @@
 	job_tec_peasant:0 "Peasant"
 	job_tec_peasant_plural:0 "Peasants"
 	job_tec_peasant_desc:0 "Masses of generally hardworking, loyal and obliging followers of nobility whose only purpose is to ensure comfort and whims of their superiors."
-	job_tec_peasant_effect_desc_base:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
+	job_tec_peasant_effect_desc_standard:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
 	job_tec_peasant_effect_desc_corporate:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
 	job_tec_peasant_effect_desc:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
 	mod_job_tec_peasant_add:0 "$job_tec_peasant$ Jobs"
@@ -1827,7 +1827,7 @@
 	job_tec_memorialist:0 "Memorialist"
 	job_tec_memorialist_plural:0 "$job_tec_memorialist$s"
 	job_tec_memorialist_desc:0 "Stories must be told, retold and contextualized; these scholars translate those memories into living story."
-	job_tec_memorialist_effect_desc_base:0 "£job_tec_memorialist£ $job_tec_memorialist_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_society$§!."
+	job_tec_memorialist_effect_desc_standard:0 "£job_tec_memorialist£ $job_tec_memorialist_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_society$§!."
 	job_tec_memorialist_effect_desc_corporate:0 "£job_tec_memorialist£ $job_tec_memorialist_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_society$§!."
 	job_tec_memorialist_effect_desc:0 "£job_tec_memorialist£ $job_tec_memorialist_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_society$§!."
 	mod_job_tec_memorialist_add:0 "$job_tec_memorialist$ Jobs"
@@ -1882,9 +1882,9 @@
 	mod_job_tec_labrat_add:0 ""
  # /
  # Forced Reeducation
-	building_tec_reeducation_facilities:0 "Reeducation Facilities"
-	building_tec_reeducation_facilities_plural:0 "Reeducation Facilities"
-	building_tec_reeducation_facilities_desc:0 "TO DO"
+	building_tec_reeducation_facility:0 "Reeducation Facility"
+	building_tec_reeducation_facility_plural:0 "Reeducation Facilities"
+	building_tec_reeducation_facility_desc:0 "TO DO"
 
 	job_tec_reeducated_subject:0 "Reeducated Subject"
 	job_tec_reeducated_subject_plural:0 "Reeducated Subjects"
