--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -453,14 +453,14 @@
 	concept_tec_ruler_job_tec_landowner_icon: "£job_tec_landowner£ $job_tec_landowner$"
 	concept_tec_ruler_job_tec_landowner_plural: "$job_tec_landowner_plural$"
 	concept_tec_ruler_job_tec_landowner_plural_icon: "£job_tec_landowner£ $job_tec_landowner_plural$"
-	concept_tec_ruler_job_tec_landowner_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_base_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_defense_armies$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_crime$: §G-15§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
+	concept_tec_ruler_job_tec_landowner_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_effect_desc_standard$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_defense_armies$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_crime$: §G-15§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
 	concept_tec_ruler_job_tec_landowner_corporate: "$job_tec_landowner$"
 	concept_tec_ruler_job_tec_landowner_corporate_alias: "$job_tec_landowner$"
 	concept_tec_ruler_job_tec_landowner_corporate_icon: "£job_tec_landowner£ $job_tec_landowner$"
 	concept_tec_ruler_job_tec_landowner_corporate_plural: "$job_tec_landowner_plural$"
 	concept_tec_ruler_job_tec_landowner_corporate_plural_icon: "£job_tec_landowner£ $job_tec_landowner_plural$"
-	concept_tec_ruler_job_tec_landowner_corporate_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_corporate_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_defense_armies$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_crime$: §G-15§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
+	concept_tec_ruler_job_tec_landowner_corporate_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_effect_desc_corporate$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_defense_armies$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_crime$: §G-15§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
 	concept_tec_ruler_job_tec_corpo_bank_director: "$job_tec_corpo_bank_director$"
 	concept_tec_ruler_job_tec_corpo_bank_director_alias: "$job_tec_corpo_bank_director$"
@@ -643,14 +643,14 @@
 	concept_tec_specialist_job_reassigner_icon: "£job_reassigner£ $job_reassigner$"
 	concept_tec_specialist_job_reassigner_plural: "$job_reassigner_plural$"
 	concept_tec_specialist_job_reassigner_plural_icon: "£job_reassigner£ $job_reassigner_plural$"
-	concept_tec_specialist_job_reassigner_desc: "§L$job_reassigner_desc$§!\n\n$job_reassigner_effect_desc_standard$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+	concept_tec_specialist_job_reassigner_desc: "§L$job_reassigner_desc$§!\n\n$job_reassigner_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
 	concept_tec_specialist_job_tec_zombie_master: "$job_tec_zombie_master$"
 	concept_tec_specialist_job_tec_zombie_master_alias: "$job_tec_zombie_master$"
 	concept_tec_specialist_job_tec_zombie_master_icon: "£job_tec_zombie_master£ $job_tec_zombie_master$"
 	concept_tec_specialist_job_tec_zombie_master_plural: "$job_tec_zombie_master_plural$"
 	concept_tec_specialist_job_tec_zombie_master_plural_icon: "£job_tec_zombie_master£ $job_tec_zombie_master_plural$"
-	concept_tec_specialist_job_tec_zombie_master_desc: "§L$job_tec_zombie_master_desc$§!\n\n$job_tec_zombie_master_effect_desc_standard$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+	concept_tec_specialist_job_tec_zombie_master_desc: "§L$job_tec_zombie_master_desc$§!\n\n$job_tec_zombie_master_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
 	# Drones
 	concept_tec_specialist_job_bath_attendant_hive: "$job_bath_attendant_hive$"
@@ -709,14 +709,14 @@
 	concept_tec_worker_job_tec_peasant_icon: "£job_slave_toiler£ $job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_plural: "$job_tec_peasant_plural$"
 	concept_tec_worker_job_tec_peasant_plural_icon: "£job_slave_toiler£ $job_tec_peasant_plural$"
-	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_base_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_effect_desc_standard$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_peasant_corporate: "$job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_corporate_alias: "$job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_corporate_icon: "£job_slave_toiler£ $job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_corporate_plural: "$job_tec_peasant_plural$"
 	concept_tec_worker_job_tec_peasant_corporate_plural_icon: "£job_slave_toiler£ $job_tec_peasant_plural$"
-	concept_tec_worker_job_tec_peasant_corporate_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_corporate_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_peasant_corporate_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_effect_desc_corporate$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_necromonger: "$job_tec_necromonger$"
 	concept_tec_worker_job_tec_necromonger_alias: "$job_tec_necromonger$"
@@ -758,14 +758,14 @@
 	concept_tec_worker_job_tec_memorialist_icon: "£job_tec_memorialist£ $job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_plural: "$job_tec_memorialist_plural$"
 	concept_tec_worker_job_tec_memorialist_plural_icon: "£job_tec_memorialist£ $job_tec_memorialist_plural$"
-	concept_tec_worker_job_tec_memorialist_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_memorialist_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc_standard$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_memorialist_corporate: "$job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_corporate_alias: "$job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_corporate_icon: "£job_tec_memorialist£ $job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_corporate_plural: "$job_tec_memorialist_plural$"
 	concept_tec_worker_job_tec_memorialist_corporate_plural_icon: "£job_tec_memorialist£ $job_tec_memorialist_plural$"
-	concept_tec_worker_job_tec_memorialist_corporate_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_corporate_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_memorialist_corporate_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc_corporate$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_labrat: "$job_tec_labrat$"
 	concept_tec_worker_job_tec_labrat_alias: "$job_tec_labrat$"
@@ -916,7 +916,7 @@
 	concept_tec_specialist_job_artificer_icon: "£job_artificer£ $job_artificer$"
 	concept_tec_specialist_job_artificer_plural: "$job_artificer_plural$"
 	concept_tec_specialist_job_artificer_plural_icon: "£job_artificer£ $job_artificer_plural$"
-	concept_tec_specialist_job_artificer_desc: ""§L$job_artificer_desc$§!\n\n$job_artificer_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£consumer_goods£ 7§!\nUpkeep: §Y£minerals£ 6§!"
+	concept_tec_specialist_job_artificer_desc: "§L$job_artificer_desc$§!\n\n$job_artificer_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£consumer_goods£ 7§!\nUpkeep: §Y£minerals£ 6§!"
 
 	concept_tec_specialist_job_artisan_drone: "$job_artisan_drone$"
 	concept_tec_specialist_job_artisan_drone_icon: "£job_artisan_drone£ $job_artisan_drone$"
