Several civic changes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2430,6 +2430,7 @@
 
 	building_energy_complex:0 "Energy Megacomplex"
 	building_energy_complex_desc:0 "This colossal complex centralizes all energy grids on the planet, improving their efficiency at the maximum amount possible."
+	tec_building_boost_quantum_with_tech_max:0 "This building boost £job_foundry£ §YFoundry§! output based on obtained £physics£ §YEnergy§! production technologies."
  # /
  # ------------------------------------------------- Strategic resources
 	building_chemical_plant_2:0 "Particle Refineries"
