improved rural district civics

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2199,13 +2199,13 @@
 	civic_tec_hive_cybernetwork_desc:0 "['concept_tec_basic_civic']\n\nIn this cybernetic collective, neural thoughts and data transfers are done with a great degree of efficiency between network drones, which are able to greatly amplify the processing signals to other drones mitigating the signal stress and making the collective stronger."
 	civic_tec_hive_cybernetwork_tooltip:0 "$tec_loc_stability$ from £job_tec_network_drone£ $job_tec_network_drone_plural$: §G+1§!"
 
-	civic_tec_hive_menial:0 "§R§!Biospheric Harmony"
-	civic_tec_hive_menial_desc:0 "['concept_tec_basic_civic']\n\nThis Hive Mind has a natural instinct that drives it to the search of the most optimal biomass and harvestable soil, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of growing and harvesting natural resources."
-	civic_tec_hive_menial_tooltip:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_agri_drone£ §Y$job_agri_drone$§! job.\n\n$tec_loc_amenities$ from £job_agri_drone£ $job_agri_drone_plural$: §G+1§!"
+	civic_tec_hive_menial_farming:0 "§R§!Biospheric Harmony"
+	civic_tec_hive_menial_farming_desc:0 "['concept_tec_basic_civic']\n\nThis Hive Mind has a natural instinct that drives it to the search of the most optimal biomass and harvestable soil, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of growing and harvesting natural resources."
+	civic_tec_hive_menial_farming_tooltip:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_agri_drone£ §Y$job_agri_drone$§! job.\n\n$tec_loc_amenities$ from £job_agri_drone£ $job_agri_drone_plural$: §G+1§!"
 
-	civic_tec_hive_menial_lithoid:0 "§R§!Lithospheric Harmony"
-	civic_tec_hive_menial_lithoid_desc:0 "['concept_tec_basic_civic']\n\nThis Hive Mind has a natural instinct that drives it to the search of the most optimal mineral veins and harvestable terrain, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of processing and extracting natural resources."
-	civic_tec_hive_menial_lithoid_tooltip:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n\n$tec_loc_amenities$ from £job_mining_drone£ $job_mining_drone_plural$: §G+1§!"
+	civic_tec_hive_menial_mining:0 "§R§!Lithospheric Harmony"
+	civic_tec_hive_menial_mining_desc:0 "['concept_tec_basic_civic']\n\nThis Hive Mind has a natural instinct that drives it to the search of the most optimal mineral veins and harvestable terrain, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of processing and extracting natural resources."
+	civic_tec_hive_menial_mining_tooltip:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n\n$tec_loc_amenities$ from £job_mining_drone£ $job_mining_drone_plural$: §G+1§!"
 
 	civic_tec_hive_functional_architecture:0 "§R§!Filigree Stricturing"
 	civic_tec_hive_functional_architecture_desc:0 "['concept_tec_basic_civic']\n\nThe delicacy and work dedicated by each drone to the structural planning and execution of this gestalt consciousness architecture is monumental, reaching degrees of construction, timings and efficiency generally out of possible predictions."
