corpo mining guilds + fixing menial civics

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -871,6 +871,15 @@
 # Job Alteration Civics
 # ------------------------------------------------------------ §P£tec_civic_job£§!
  # Vanilla
+	civic_mining_guilds:0 "§P£tec_civic_job£§!Mining Guilds"
+	civic_mining_guilds_desc:0 "['concept_tec_job_alteration_civic']\n\nSeveral large mining guilds have reached a dominant position in this society. The government relies heavily on their support."
+	civic_tec_mining_guilds_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£district£ Rock and Stone§!\n£district£ §YMining Districts§! provide §G+0.15§! $tec_loc_minerals$ from £job_miner£ Miners and have §R1§! extra $tec_loc_energy$ upkeep.\n\n$tec_loc_c_unlocks_feature$ §H£district£ Deep Rock Drilling§!\nEvery §Y3§! £district£ §HMining Districts§! grant §G+1§! §Y£building£ Max Buildable Mining Districts§! on regular planets.\n\n"
+
+	civic_tec_corporate_mining_guilds:0 "§P£tec_civic_job£§!Drilling Corps"
+	civic_tec_corporate_mining_guilds_desc:0 "['concept_tec_job_alteration_civic']\n\nA large group of entepreneur and consolidated mining corps have a big participation of the megacorp shares, being a determinant support on all-scale types of operations."
+	civic_tec_corporate_mining_guilds_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£district£ Rock and Stone§!\n£district£ §YMining Districts§! provide §G+0.15§! $tec_loc_minerals$ from £job_miner£ Miners and have §R1§! extra $tec_loc_energy$ upkeep.\n\n$tec_loc_c_unlocks_feature$ §H£district£ Deep Rock Drilling§!\nEvery §Y3§! £district£ §HMining Districts§! grant §G+1§! §Y£building£ Max Buildable Mining Districts§! on regular planets.\n\n"
+
+
 	civic_warrior_culture:0 "§P£tec_civic_job£§!Warrior Culture"
 	civic_warrior_culture_desc:0 "['concept_tec_job_alteration_civic_entertainer']\n\nThis society has developed into a hardy warrior culture. Martial prowess is valued above all else, and true glory can only be found on the field of battle."
 	civic_warrior_culture_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£job£ Dueling Expertise§!\nReplaces £job_entertainer£ §Y$job_entertainer$§! Jobs with ['concept_tec_specialist_job_duelist_icon'] Jobs.\n\n$tec_loc_c_unlocks_feature$ §H£job_duelist£ Dueling Challenges§!\n£job_duelist£ §Y$job_duelist$s§! boost the $tec_loc_unity$ output of other £job_duelist£ §Y$job_duelist$s§! present on the planet by §G5%§! each.\n\n$tec_loc_c_modifiers$"
@@ -1298,11 +1307,6 @@
 
 	civic_functional_architecture:0 "§R§!Functional Architecture"
 	civic_functional_architecture_desc:1 "['concept_tec_basic_civic']\n\nThis society is renowned for its simple yet functional architecture. There are those who would refer to this building style as boring or even depressing, but in most cases, neo-concrete does the job just as well as any other building material."
-
-	civic_mining_guilds:0 "§R§!Mining Guilds"
-	civic_mining_guilds_desc:0 "['concept_tec_basic_civic']\n\nSeveral large mining guilds have reached a dominant position in this society. The government relies heavily on their support."
-	civic_tec_mining_guilds_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£district£ Rock and Stone§!\n£district£ §YMining Districts§! provide §G+0.15§! $tec_loc_minerals$ from £job_miner£ Miners and have §R1§! extra $tec_loc_energy$ upkeep.\n\n$tec_loc_c_unlocks_feature$ §H£district£ Deep Rock Drilling§!\nEvery §Y3§! £district£ §HMining Districts§! grant §G+1§! §Y£building£ Max Buildable Mining Districts§! on regular planets.\n\n"
-		#OLD_civic_tec_mining_guilds_tooltip:0 "£district£ §YMining Districts§! provide §G+1§! extra £job_miner£ Miner Job and £housing£ Housing, and cost §R+20%§! upkeep each.\n\n"Every §Y3§! §HIndustrial Districts§! grant §G1§! £building£ §YBuilding Slot§! on regular planets.
 
 	civic_nationalistic_zeal:0 "§R§!Nationalistic Zeal"
 	civic_nationalistic_zeal_desc:0 "['concept_tec_basic_civic']\n\nA strong sense of nationalistic pride permeates all layers of this society."
@@ -2125,7 +2129,13 @@
 	civic_tec_hive_scavengers_desc:0 "['concept_tec_job_alteration_civic']\n\nEach single drone of this Collective is specifically taught since inception to take back any useful element found while patroling, doing menial tasks or overall day-to-day operations, and this has led to an efficient and intelligent way of obtaining and reusing any relevant or usable element from any kind of debris or technological remain."
 	civic_tec_hive_scavengers_tooltip:0 "$civic_scavengers_effects$\nEach two upgrades of the £building£ §YCapital Building§! will provide a £job_tec_scavenger_drone£ §Y$job_tec_scavenger_drone$§! job.\n- $job_tec_scavenger_drone_effect_desc_default$."
 
+	civic_tec_hive_menial_farming:0 "§P£tec_civic_job£§!Biospheric Harmony"
+	civic_tec_hive_menial_farming_desc:0 "['concept_tec_job_alteration_civic']\n\nThis Hive Mind has a natural instinct that drives it to the search of the most optimal biomass and harvestable soil, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of growing and harvesting natural resources."
+	civic_tec_hive_menial_farming_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£district£ Natural Boon§!\n£district£ §YFood Districts§! provide §G+0.15§! $tec_loc_food$ from £job_agri_drone£ $job_agri_drone_plural$ and have §R1§! extra $tec_loc_energy$ upkeep.\n\n$tec_loc_c_unlocks_feature$ §H£district£ Soil Improvement§!\nEvery §Y3§! £district£ §HFood Districts§! grant §G+1§! §Y£building£ Max Buildable Food Districts§! on regular planets.\n\n$tec_loc_c_modifiers$\n$tec_loc_amenities$ from £job_agri_drone£ $job_agri_drone_plural$: §G+1§!"
 
+	civic_tec_hive_menial_mining:0 "§P£tec_civic_job£§!Lithospheric Knowledge"
+	civic_tec_hive_menial_mining_desc:0 "['concept_tec_job_alteration_civic']\n\nEach drone of this hivemind is driven, by instinct, to the most optiomal and rich mineral veins and harvestable terrain, collaborating with other drones in a perfect harmony and switf processing of the natural resources obtained."
+	civic_tec_hive_menial_mining_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£district£ Increased Extraction§!\n£district£ §YMining Districts§! provide §G+0.15§! $tec_loc_minerals$ from £job_miner£ Mining Drones and have §R1§! extra $tec_loc_energy$ upkeep.\n\n$tec_loc_c_unlocks_feature$ §H£district£ Deposit Detection§!\nEvery §Y3§! £district£ §HMining Districts§! grant §G+1§! §Y£building£ Max Buildable Mining Districts§! on regular planets.\n\n$tec_loc_c_modifiers$\n$tec_loc_amenities$ from £job_mining_drone£ $job_mining_drone_plural$: §G+1§!"
  # /
 # /
 
@@ -2198,14 +2208,6 @@
 	civic_tec_hive_cybernetwork:0 "§R§!Peer-to-Peer Cybernetwork"
 	civic_tec_hive_cybernetwork_desc:0 "['concept_tec_basic_civic']\n\nIn this cybernetic collective, neural thoughts and data transfers are done with a great degree of efficiency between network drones, which are able to greatly amplify the processing signals to other drones mitigating the signal stress and making the collective stronger."
 	civic_tec_hive_cybernetwork_tooltip:0 "$tec_loc_stability$ from £job_tec_network_drone£ $job_tec_network_drone_plural$: §G+1§!"
-
-	civic_tec_hive_menial_farming:0 "§R§!Biospheric Harmony"
-	civic_tec_hive_menial_farming_desc:0 "['concept_tec_basic_civic']\n\nThis Hive Mind has a natural instinct that drives it to the search of the most optimal biomass and harvestable soil, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of growing and harvesting natural resources."
-	civic_tec_hive_menial_farming_tooltip:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_agri_drone£ §Y$job_agri_drone$§! job.\n\n$tec_loc_amenities$ from £job_agri_drone£ $job_agri_drone_plural$: §G+1§!"
-
-	civic_tec_hive_menial_mining:0 "§R§!Lithospheric Harmony"
-	civic_tec_hive_menial_mining_desc:0 "['concept_tec_basic_civic']\n\nThis Hive Mind has a natural instinct that drives it to the search of the most optimal mineral veins and harvestable terrain, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of processing and extracting natural resources."
-	civic_tec_hive_menial_mining_tooltip:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n\n$tec_loc_amenities$ from £job_mining_drone£ $job_mining_drone_plural$: §G+1§!"
 
 	civic_tec_hive_functional_architecture:0 "§R§!Filigree Stricturing"
 	civic_tec_hive_functional_architecture_desc:0 "['concept_tec_basic_civic']\n\nThe delicacy and work dedicated by each drone to the structural planning and execution of this gestalt consciousness architecture is monumental, reaching degrees of construction, timings and efficiency generally out of possible predictions."
@@ -2494,6 +2496,11 @@
 # ------------------------------------------------------------ §P£tec_civic_job£§!
  # Vanilla
 	# Memorialist with the normal version
+
+
+	civic_machine_rockbreakers:0 "§P£tec_civic_job£§!Rockbreakers"
+	civic_machine_rockbreakers_desc:0 "['concept_tec_job_alteration_civic']\n\nOne of the Machine Intelligence's precursor systems was tasked with overseeing planetside mining operations, improving mineral production."
+	civic_machine_rockbreakers_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£district£ Efficient Extraction§!\n£district£ §YMining Districts§! provide §G+0.15§! $tec_loc_minerals$ from £job_miner£ Mining Drones and have §R1§! extra $tec_loc_energy$ upkeep.\n\n$tec_loc_c_unlocks_feature$ §H£district£ Mantle Perforation§!\nEvery §Y3§! £district£ §HMining Districts§! grant §G+1§! §Y£building£ Max Buildable Mining Districts§! on regular planets.\n\n"
  # /
  # Evolved
 	civic_tec_machine_scavengers:0 "§P£tec_civic_job£§!Reprocessors"
@@ -2508,9 +2515,6 @@
  # Vanilla
 	civic_machine_replication:0 "§R§!Rapid Replicator"
 	civic_machine_replication_desc:0 "['concept_tec_basic_civic']\n\nThe Units that constitute the Machine Intelligence were originally designed for rapid proliferation. The Machine Intelligence retains many of these early production pipeline optimizations."
-
-	civic_machine_rockbreakers:0 "§R§!Rockbreakers"
-	civic_machine_rockbreakers_desc:0 "['concept_tec_basic_civic']\n\nOne of the Machine Intelligence's precursor systems was tasked with overseeing planetside mining operations, improving mineral production."
 
 	civic_machine_built_to_last:0 "§R§!Built to Last"
 	civic_machine_built_to_last_desc:0 "['concept_tec_basic_civic']\n\nBuilt to an exceptional standard, individual units of this Machine Empire require only a minimum of operational maintenance."
