--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -555,6 +555,11 @@
 	councilor_civic_tec_corporate_land_of_opportunity_custom_modifier:0 "Effect of the $civic_tec_corporate_land_of_opportunity$ £planet£ §YDesignation Bonuses§!: §G+5%§! "
 		# Improve loc ^
 
+	councilor_civic_tec_corporate_mining_guilds:0 "$councilor_mining_guilds$"
+	councilor_civic_tec_corporate_mining_guilds_female:0 "$councilor_mining_guilds_female$"
+	councilor_civic_tec_corporate_mining_guilds_desc:0 "$councilor_mining_guilds_desc$"
+	councilor_civic_tec_corporate_mining_guilds_custom_modifier:0 "$councilor_mining_guild_custom_modifier_desc$"
+
 	councilor_civic_tec_corporate_quantum_alloys:0 "Quantum Profiteer"
 	councilor_civic_tec_corporate_quantum_alloys_female:0 "$councilor_civic_tec_corporate_quantum_alloys$"
 	councilor_civic_tec_corporate_quantum_alloys_desc:0 "The $TITLE$ review new ways of squeeze quantic-bonding technologies for profit."
