feudal realms + more smol changes

--- a/localisation/english/zz_evolved_categories_l_english.yml
+++ b/localisation/english/zz_evolved_categories_l_english.yml
@@ -67,6 +67,7 @@
  planet_tec_occultists: "$job_tec_minor_occultist_plural$"
  planet_tec_batteries: "$job_organic_battery_plural$"
  planet_tec_druids: "$job_tec_druid_plural$"
+ planet_tec_peasants: "$job_tec_peasant_plural$"
 
 leader_rulers:0 "Rulers"
 leader_envoys:0 "Envoys"
