--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -857,9 +857,9 @@
 	job_tec_peasant:0 "Peasant"
 	job_tec_peasant_plural:0 "Peasants"
 	job_tec_peasant_desc:0 "Masses of generally hardworking, loyal and obliging followers of nobility whose only purpose is to ensure comfort and whims of their superiors."
-	job_tec_peasant_effect_desc_standard:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
-	job_tec_peasant_effect_desc_corporate:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
-	job_tec_peasant_effect_desc:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
+	job_tec_peasant_effect_desc_standard:0 "£job_tec_peasant£ $job_tec_peasant_plural$ consume §Y$tec_loc_amenities$§! for generating §Y$tec_loc_basic_resources$§! and increasing §Y$mod_base_pop_category_rulers$§! Jobs Output."
+	job_tec_peasant_effect_desc_corporate:0 "£job_tec_peasant£ $job_tec_peasant_plural$ consume §Y$tec_loc_trade$§! for generating §Y$tec_loc_basic_resources$§! and increasing §Y$mod_base_pop_category_rulers$§! Jobs Output."
+	job_tec_peasant_effect_desc:0 "£job_tec_peasant£ $job_tec_peasant_plural$ consume [tec_scripted_loc_amenities_trade_upkeeps_normal] for generating §Y$tec_loc_basic_resources$§! and increasing §Y$mod_base_pop_category_rulers$§! Jobs Output."
 	mod_job_tec_peasant_add:0 "$job_tec_peasant$ Jobs"
 	mod_job_tec_peasant_per_pop:0 "§G+1§! $job_tec_peasant$ Job Per $VALUE$ Pops"
 	mod_job_tec_peasant_per_pop_short:0 "\n§G+1§! £mod_job_primitive_laborer_add£ per $VALUE$ £pop£"
