Cordyceptic + several other changes

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -93,8 +93,13 @@
 # ------------------------------------------------------------
 	tec_tradition_unlock_evolved_paths:0 "Completing the tradition and its effects will unlock §HEvolved Ascensions§!."
 
-	requires_ascension_perks_5:1 "$TRIGGER_FAIL$Requires four other Ascension Perks to be selected first."
-	requires_ascension_perks_7:1 "$TRIGGER_FAIL$Requires six other Ascension Perks to be selected first."
+	requires_ascension_perks_1:1 "$TRIGGER_FAIL$Requires §Y1§! other Ascension Perk to be selected first."
+	requires_ascension_perks_2:1 "$TRIGGER_FAIL$Requires §Y2§! other Ascension Perks to be selected first."
+	requires_ascension_perks_3:1 "$TRIGGER_FAIL$Requires §Y3§! other Ascension Perks to be selected first."
+	requires_ascension_perks_4:1 "$TRIGGER_FAIL$Requires §Y4§! other Ascension Perks to be selected first."
+	requires_ascension_perks_5:1 "$TRIGGER_FAIL$Requires §Y5§! other Ascension Perks to be selected first."
+	requires_ascension_perks_7:1 "$TRIGGER_FAIL$Requires §Y6§! other Ascension Perks to be selected first."
+
 # PSIONIC PATH
 # ------------------------------------------------------------
 # ------------------------------------------------- Psionic T1
