--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -174,6 +174,15 @@
 
 	sm_naval_logistics_office_desc_modifier:2 "Anchorages: §G+2.5%§! extra $tec_loc_navalcap_from_jobs$"
 
+
+	# Cordyceptic
+		sm_cordyceptic_reanimation_facility:0 "Cordyceptic Reanimation Facility"
+		sm_cordyceptic_reanimation_facility_desc:0 "§LNormally we have to find recently-dead subjects for our reanimation practices, but with a spawning system we can either infiltrate them at an earlier stage and have a steady supply of hosts, or cultivate residual life for later infestation.§!\n"
+		requires_tiyanki_spawning_system:0 "§RNeeds to be built in an §YInhabited system§!, with at least one of our colonies, or a system teeming with life like §YTiyana Vek§!, §YTiyun Ort§!, or §YAmor Alveo§!.§!"
+		sm_cordyceptic_reanimation_facility_desc_modifier:0 "Will produce a §YReanimated Fleet§! every §G5 years§! when built in systems swarming with biological life."
+	# /
+# /
+
 # DECISIONS replaces
 # ------------------------------------------------------------
 	decision_arcology_project_requirements:0 "£trigger_no£ §RAll district slots on the planet must be filled with§! £district£ §YHousing Districts§!, §Y$district_industrial_plural$§! or at least 3 fully upgraded £building£ §Y$building_tec_megacity_plural$§!."
