--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -31,7 +31,7 @@
  	councilor_merchant_guilds_custom_modifier_desc:0 "NOT USED. IF SEEN REPORT TO EVOLVED"
 	councilor_mining_guild_custom_modifier_desc:1 "$mod_planet_miners_stability_produces_add$: §G+$@councilor_mining_guilds_miner_stability$§!"
 	councilor_private_military_companies_custom_modifier_desc:1 "$mod_planet_soldiers_stability_produces_add$: §G+$@councilor_private_military_companies_stability$§!."
-	councilor_reanimated_armies_custom_modifier_desc:1 "NOT USED. IF SEEN REPORT TO EVOLVED"
+	councilor_reanimated_armies_custom_modifier_desc:1 "$tec_loc_unity$ from £defense_army£ Undead Defensive Armies: §G+$@councilor_reanimated_armies_bonus$§!"
 	councilor_toxic_baths_custom_modifier_desc:0 "NOT USED. IF SEEN REPORT TO EVOLVED"
 	councilor_trading_posts_custom_modifier_desc:1 "$tec_loc_trade_value$ from Trade Hubs: §G+$@councilor_trading_posts_bonus$§!"
 	councilor_warrior_culture_custom_modifier_desc:1 "$tec_loc_amenities$ from $job_duelist_name_plural_with_icon$: §G+$@councilor_warrior_culture_amenities$§!\n$tec_loc_naval_cap$ from $job_duelist_name_plural_with_icon$: §G+$@councilor_warrior_culture_naval_cap$§!"
