brood changes + more

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -859,7 +859,7 @@
 	job_tec_peasant_desc:0 "Masses of generally hardworking, loyal and obliging followers of nobility whose only purpose is to ensure comfort and whims of their superiors."
 	job_tec_peasant_effect_desc_standard:0 "£job_tec_peasant£ $job_tec_peasant_plural$ consume §Y$tec_loc_amenities$§! for generating §Y$tec_loc_basic_resources$§! and increasing §Y$mod_base_pop_category_rulers$§! Jobs Output."
 	job_tec_peasant_effect_desc_corporate:0 "£job_tec_peasant£ $job_tec_peasant_plural$ consume §Y$tec_loc_trade$§! for generating §Y$tec_loc_basic_resources$§! and increasing §Y$mod_base_pop_category_rulers$§! Jobs Output."
-	job_tec_peasant_effect_desc:0 "£job_tec_peasant£ $job_tec_peasant_plural$ consume [tec_scripted_loc_amenities_trade_upkeeps_normal] for generating §Y$tec_loc_basic_resources$§! and increasing §Y$mod_base_pop_category_rulers$§! Jobs Output."
+	job_tec_peasant_effect_desc:0 "£job_tec_peasant£ $job_tec_peasant_plural$ consume §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! for generating §Y$tec_loc_basic_resources$§! and increasing §Y$mod_base_pop_category_rulers$§! Jobs Output."
 	mod_job_tec_peasant_add:0 "$job_tec_peasant$ Jobs"
 	mod_job_tec_peasant_per_pop:0 "§G+1§! $job_tec_peasant$ Job Per $VALUE$ Pops"
 	mod_job_tec_peasant_per_pop_short:0 "\n§G+1§! £mod_job_primitive_laborer_add£ per $VALUE$ £pop£"
@@ -1877,9 +1877,11 @@
  # Labrats
 	job_tec_labrat:0 "Test Subject"
 	job_tec_labrat_plural: "Test Subjects"
-	job_tec_labrat_desc:0 ""
-	job_tec_labrat_effect_desc:0 ""
-	mod_job_tec_labrat_add:0 ""
+	job_tec_labrat_desc:0 "Serving as either novice researchers or direct experiment subjects, these dedicated individuals serve the empire in mind and body. Literally."
+	job_tec_labrat_effect_desc:0 "£job_tec_labrat£ $job_tec_labrat_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_research_resources$§!, by participating in ''questionable'' experiments."
+	job_tec_labrat_effect_desc_corporate:0 "£job_tec_labrat£ $job_tec_labrat_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_research_resources$§!, by participating in ''questionable'' experiments."
+	job_tec_labrat_effect_desc:0 "£job_tec_labrat£ $job_tec_labrat_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y$tec_loc_research_resources$§!, by participating in ''questionable'' experiments."
+	mod_job_tec_labrat_add:0 "\n§G+1§! £mod_job_tec_labrat_add£ per $VALUE$ £pop£"
  # /
  # Forced Reeducation
 	building_tec_reeducation_facility:0 "Reeducation Facility"
