--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -772,7 +772,14 @@
 	concept_tec_worker_job_tec_labrat_icon: "£job_tec_labrat£ $job_tec_labrat$"
 	concept_tec_worker_job_tec_labrat_plural: "$job_tec_labrat_plural$"
 	concept_tec_worker_job_tec_labrat_plural_icon: "£job_tec_labrat£ $job_tec_labrat_plural$"
-	concept_tec_worker_job_tec_labrat_desc: "§L$job_tec_labrat_desc$§!\n\n$job_tec_labrat_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_labrat_desc: "§L$job_tec_labrat_desc_standard$§!\n\n$job_tec_labrat_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_tec_labrat_corporate: "$job_tec_labrat$"
+	concept_tec_worker_job_tec_labrat_corporate_alias: "$job_tec_labrat$"
+	concept_tec_worker_job_tec_labrat_corporate_icon: "£job_tec_labrat£ $job_tec_labrat$"
+	concept_tec_worker_job_tec_labrat_corporate_plural: "$job_tec_labrat_plural$"
+	concept_tec_worker_job_tec_labrat_corporate_plural_icon: "£job_tec_labrat£ $job_tec_labrat_plural$"
+	concept_tec_worker_job_tec_labrat_corporate_desc: "§L$job_tec_labrat_desc_corporate$§!\n\n$job_tec_labrat_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_reeducated_subject: "$job_tec_reeducated_subject$"
 	concept_tec_worker_job_tec_reeducated_subject_alias: "$job_tec_reeducated_subject$"
