--- a/localisation/english/zz_evolved_categories_l_english.yml
+++ b/localisation/english/zz_evolved_categories_l_english.yml
@@ -56,15 +56,18 @@
 	decisions_ecu: "Ecumenopolis Decisions"
 	habitats: "Habitats"
 	tec_protoworlds: "Protoworlds"
-	planet_criminals: "$job_criminal_plural$"
-	planet_colonists: "$job_colonist_plural$"
-	planet_tec_trade_drones: "$job_tec_trade_drone_plural$"
-	planet_tec_labour_heroes: "$job_tec_labour_hero_plural$"
-	planet_tec_transcendents: "$job_tec_transcendent_plural$"
-	planet_tec_occultists: "$job_tec_minor_occultist_plural$"
-	planet_tec_batteries: "$job_organic_battery_plural$"
-	planet_tec_druids: "$job_tec_druid_plural$"
-	planet_tec_peasants: "$job_tec_peasant_plural$"
+	planet_criminals: "$job_criminal_plural$ Jobs"
+	planet_colonists: "$job_colonist_plural$ Jobs"
+	planet_tec_trade_drones: "$job_tec_trade_drone_plural$ Jobs"
+	planet_tec_labour_heroes: "$job_tec_labour_hero_plural$ Jobs"
+	planet_tec_transcendents: "$job_tec_transcendent_plural$ Jobs"
+	planet_tec_occultists: "$job_tec_minor_occultist_plural$ Jobs"
+	planet_tec_techno_priests: "$job_tec_techno_priest_plural$ Jobs"
+	planet_tec_batteries: "$job_organic_battery_plural$ Jobs"
+	planet_tec_druids: "$job_tec_druid_plural$ Jobs"
+	planet_tec_peasants: "$job_tec_peasant_plural$ Jobs"
+	planet_tec_labrats: "$job_tec_labrat_plural$ Jobs"
+	planet_tec_necromancers: "$job_necromancer_plural$ Jobs"
 
 	leader_rulers:0 "Rulers"
 	leader_envoys:0 "Envoys"
