pleasure giver things

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1850,9 +1850,9 @@
 	job_tec_pleasure_giver:0 "Pleasure Giver"
 	job_tec_pleasure_giver_plural:0 "Pleasure Giver"
 	job_tec_pleasure_giver_desc:0 "Consecrated to a life of providing pleasure, rest and entertainment, these workers ensure the joyful distractions and excellences to whoever seeks new experiences."
-	job_tec_pleasure_giver_effect_desc:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_happiness$§!."
-	job_tec_pleasure_giver_effect_desc_corporate:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_happiness$§!."
-	job_tec_pleasure_giver_desire_effect_desc:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ generate §Y$tec_loc_amenities$§!, §Y$tec_loc_happiness$§! and §Y$tec_loc_pop_growth$§!."
+	job_tec_pleasure_giver_effect_desc:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_happiness$§!."
+	job_tec_pleasure_giver_effect_desc_corporate:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_happiness$§!."
+	job_tec_pleasure_giver_desire_effect_desc:0 "£job_servant£ $job_tec_pleasure_giver_plural$ generate §Y$tec_loc_amenities$§!, §Y$tec_loc_happiness$§! and §Y$tec_loc_pop_growth$§!."
  # /
  # Zombies
 	building_tec_reanimation_necropoli_1:0 "Reanimation Halls"
